syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/struct.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;
//option java_outer_classname = "DiagramResponseOuter";

message Annotation {
  message Vertex {
    double x = 1;
    double y = 2;
  }
  message Region {
    string shape = 1;
    repeated Vertex vertices = 2;
    int32 page = 3;
  }

  optional string text = 1;
  optional double confidence = 2;
  Region region = 3;
  repeated google.protobuf.Struct entities = 4;
}

message DiagramResponse {
  message ConvertResult {
    int32 page = 1;

    // The binary for the converted SVG file
    optional bytes svg_binary = 2;

    // The binary for the converted PNG file
    optional bytes png_binary = 3;

    optional string error_message = 4;
  }
    /*
     The id of the source file used for detecting annotations and building
     the interactive engineering diagram
     */
    optional int64 file_id = 1;

    /*
    The external id of the source file used for detecting annotations and building
    the interactive engineering diagram
    */
    optional string file_external_id = 2;

    // The identified entity annotations with bounding boxes
    repeated Annotation items = 3;

    // Converted SVGs / PNGs
    repeated ConvertResult convertResults = 4;
}

message ConvertResponse {
  message Result {
    int32 page = 1;

    // The URL for the converted SVG file
    optional string svg_url = 2;

    // The URL for the converted PNG file
    optional string png_url = 3;

    optional string error_message = 4;
  }
  /*
     The id of the source file used for building
     interactive P&ID
     */
  optional int64 file_id = 1;

  /*
  The external id of the source file used for building
  interactive P&ID
  */
  optional string file_external_id = 2;

  repeated Result results = 3;
}